2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* RimWorld_LanguageWorker_French.csproj: Customized build
	process with targets InstallModOnUnix and InstallModOnWindows

2020-05-07  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Clean out debugging code

2020-05-05  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Pluralize function completed for
	quasi-totality of the labels in the game. The unit test
	contains 1555 of them.

2020-05-04  b606  <7627533+b606@users.noreply.github.com>

	* InspectionPatch.cs: Extended InspectionPatch to many
	GenerateGrammarRequest methods. Missing:
	PlayLogEntry_Interaction.

	* RulesForDefPatch.cs:
	* LanguageWorker_French.cs:
	* RulesForBodyPartRecordPatch.cs:
	* RimWorld_LanguageWorker_French.csproj: Added patches for
	RulesForDef and RulesForBodyPartRecord in GrammarUtility.
	Detect labels which are already in plural. Fix gender (do not
	use "Proits"-> son/sa) and rules for plural only labels.

	* StatsLogger.cs:
	* LanguageWorker_French_Debug.cs: Added debugging function
	IntermediateLogging for use between StartLogging/StopLogging.

	* Patcher.cs: Switch Harmony.DEBUG on (or off) when needed.

2020-05-02  b606  <7627533+b606@users.noreply.github.com>

	* AssemblyInfo.cs: Chaged assebly version

2020-05-01  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Moved
	LanguageWorkerPatcher.DoPatching() to the class
	LanguageWorker_Mod.

	* LanguageWorker_Mod.cs:
	* LoadedLanguagePatch.cs:
	* RimWorld_LanguageWorker_French.csproj: Added the class
	LanguageWorker_Mod and a libHarmony prefix patch to autoload
	the language worker.

	* RulesForPawnPatch.cs: Changed the patch to use Harmony
	TargetMethod().

	* StatsLogger.cs: Fix a comment.

2020-04-29  b606  <7627533+b606@users.noreply.github.com>

	* LanguageWorker_French.cs: Fix the grammatical gender and
	kind labels for epicene words in the HashSets